<resources>
    <string name="app_name">Trakka Map</string>
    <string name="title_explore">Explore</string>
    <string name="title_achievements">Achievements</string>
    <string name="title_profile">Profile</string>
    <string name="button1_text">Help</string>
    <string name="button2_text">Settings</string>
    <string name="button3_text">Privacy</string>
    <string name="hi_user">Hi, User</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="privacy">Privacy</string>
    <string name="delete">Delete</string>
    <string name="warning_text">This action cannot be undone</string>
    <string name="delete_label_text">Erase all location records</string>
    <string name="privacy_text">Trakka Map values your privacy. Here is some important information regarding your data on Trakka Map.\n\nTrakka Map [\"the app\"] and its developers (Level Down Games) [\"the developers\"] do not collect location data to external servers. All location information is stored on-device, locally. Our third-party map providers, OpenStreetMap and OSMDroid [\"the map providers\"] may collect additional usage information. The developers do not interact with such actions nor have any influence over them. The map providers are subject to their own terms and conditions. The developers do not provide warranty for the app\'s usage.</string>
    <string name="copyright_text">© Level Down Games - Brasil, 2024</string>
</resources>