<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#1c1b1f"
    android:orientation="vertical">

    <!-- Content of the new fragment -->

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_24"
        android:background="#00000000"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="15dp"
        />


    <ImageView
        android:id="@+id/centralIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="32dp"
        android:paddingBottom="42dp"
        android:src="@drawable/baseline_purple_settings_64"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="#904adc"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/centralIcon"
        app:layout_constraintEnd_toEndOf="@id/centralIcon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/centralIcon" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:gravity="center"
        android:backgroundTint="@color/button_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.275"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/delete_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.275"
        android:text="@string/delete_label_text"
        android:textColor="@color/light_purple"
        android:textSize="14sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/delete_main_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/warning_text"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:textStyle="normal" />



</androidx.constraintlayout.widget.ConstraintLayout>